--- a/text-animation/style.css
+++ b/text-animation/style.css
@@ -1,39 +1,45 @@
-.regular-animation .oh{
+.regular-animation .oh {
     opacity: 0;
     animation-name: r-oh;
     animation-duration: .5s;
     animation-delay: 1s;
     animation-fill-mode: forwards;
 }
+
 .regular-animation {
     border-top: black solid;
 }
-.regular-animation .my{
+
+.regular-animation .my {
     opacity: 0;
     animation-name: r-my;
     animation-duration: .5s;
     animation-delay: 2s;
     animation-fill-mode: forwards;
 }
-.regular-animation .god{
+
+.regular-animation .god {
     opacity: 0;
     animation-name: r-my;
     animation-duration: .5s;
     animation-delay: 3s;
     animation-fill-mode: forwards;
 }
-.regular-animation .text{
+
+.regular-animation .text {
     opacity: 0;
     animation-name: r-text;
     animation-duration: .5s;
     animation-delay: 4s;
     animation-fill-mode: forwards;
 }
+
 .flashy-animation {
     padding-top: 2em;
     border-bottom: black solid;
 }
-.flashy-animation .oh{
+
+.flashy-animation .oh {
     opacity: 0;
     font-size: .5em;
     animation-name: f-oh;
@@ -42,7 +48,7 @@
     animation-fill-mode: forwards;
 }
 
-.flashy-animation .my{
+.flashy-animation .my {
     opacity: 0;
     font-size: .8em;
     animation-name: f-my;
@@ -51,7 +57,7 @@
     animation-fill-mode: forwards;
 }
 
-.flashy-animation .god{
+.flashy-animation .god {
     position: relative;
     display: inline-block;
     opacity: 0;
@@ -63,7 +69,7 @@
     animation-fill-mode: forwards;
 }
 
-.flashy-animation .text{
+.flashy-animation .text {
     opacity: 0;
     font-size: 1em;
     animation-name: f-text;
@@ -72,36 +78,80 @@
     animation-fill-mode: forwards;
 }
 
+nav {
+    background-color: rgb(240, 240, 240);
+    margin-bottom: 4rem;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding-left: 0;
+}
+
+nav ul li {
+    font-weight: bold;
+}
+
+nav ul li.active,
+nav ul li:hover {
+    background-color: rgb(32, 32, 32);
+    color: white;
+}
+
+nav ul li a {
+    display: block;
+    margin-bottom: 0.5rem;
+    text-decoration: none;
+    margin: 0;
+    color: black;
+    padding: 0.8rem 1rem;
+}
+
+nav ul li.active a,
+nav ul li:hover a {
+    color: white;
+}
+
 
 
 @keyframes r-oh {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
+
 @keyframes r-my {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
+
 @keyframes r-god {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
+
 @keyframes r-text {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
@@ -111,6 +161,7 @@
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
@@ -120,28 +171,34 @@
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
 }
+
 @keyframes f-god {
     0% {
         transform: translateY(0px);
         opacity: 0;
     }
+
     75% {
         transform: translateY(-30px);
         opacity: 1;
     }
+
     100% {
         transform: translateY(0px);
         opacity: 1;
     }
 }
+
 @keyframes f-text {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
