--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 html {
     font-family: var(--fontRoboto);
+    overflow-x: hidden;
 }
 
 
@@ -38,7 +39,7 @@ header {
 }
 
 header.active {
-    position: relative;
+    /* position: relative; */
     transform: translateY(0rem);
 }
 
@@ -127,7 +128,7 @@ main p span {
 .box {
     display: block;
     /* width: min(40rem, 100%); */
-    height: 55vw;
+    height: 40vw;
     /* margin: 6rem auto 0 auto; */
     background-color: lightgray;
     overflow-y: scroll;
@@ -150,6 +151,7 @@ main p span {
     justify-content: center;
     align-items: center;
     color: white;
+    cursor: pointer;
 }
 
 .roundEspen {
@@ -162,6 +164,11 @@ main p span {
     justify-content: center;
     align-items: center;
     color: white;
+    cursor: pointer;
+}
+
+.inactive {
+    background: gray;
 }
 
 #start {
@@ -182,4 +189,21 @@ main p span {
     100% {
         transform: scale(1);
     }
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+nav ul li {
+    list-style: none;
+    padding: 0 1rem 1rem 1rem;
+}
+
+nav ul li a {
+    /* text-decoration: none; */
+    color: #333;
 }
