--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ main p span {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
 }
 
 .roundVasilis {
